--- a/main.css
+++ b/main.css
@@ -66,11 +66,11 @@ body{
   position: absolute;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .form{
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -90,7 +90,7 @@ body{
   align-items: center;
   width: 90%;
   margin:0 auto;
-  height: 100%;
+  height: 100vh;
 }
 
 .leftForm{
@@ -98,15 +98,15 @@ body{
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  min-width: 440px;
+/*  min-width:600px; */
 }
 
 .dateShow{
-  font-size: 50px;
+  font-size: 4vw;
 }
 
 .clock{
-  font-size: 100px;
+  font-size: 5.5vw;
 }
 
 .forms,
@@ -117,7 +117,7 @@ body{
 .greeting{
   text-align: center;
   margin: 20px 0;
-  font-size: 50px;
+  font-size: 3.7vw;
 }
 
 
@@ -149,23 +149,37 @@ body{
 .rightForm{
   display:flex;
   flex-direction: column;
+  min-width: 250px;
+  height: 580px;
   width: 35%;
-  height: 75%;
 }
 
 .rightForm ul{
   padding: 5px 0;
 }
 
+
+.todoText{
+  width: 100%;
+  height: 100%;
+}
+
+.todoText>p{
+  font-family: 'Dancing Script', sans-serif;
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .toDoBox{
   width: 100%;
-  height: 50%;
+  height: 250px;
   border-radius: 10px;
   background-color: var(--white-transparent-color);
   word-wrap: break-word;
   overflow-y: auto;
   padding: 15px;
-  margin: 10px 0;
   display:block;
 }
 
@@ -177,14 +191,16 @@ display: none;
 .todoSave{
   cursor: pointer;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
 .todoSave .div1{
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-
+  width: 80%;
 }
 
 .div1 input{
@@ -195,25 +211,36 @@ display: none;
   color: var(--black-transparent-color);
   text-shadow: -0.5px -0.5px var(--black-transparent-color);
   font-weight: bold;
+  display: inline-block;
+  max-width: 80%;
 }
 
 .div1 .redColor{
   color: #d63031;
   text-shadow: -0.5px -0.5px #e84118;
   font-size: 16px;;
-
 }
 
 .div1 .textLine{
   text-decoration: line-through;;
   color: rgba(200, 200, 200, 0.5)
+}
 
+.div1 input[type = "checkbox"]{
+  width: 14px;
+  height: 14px;
+}
+
+
+.div2{
+  width: 20%;
+  text-align: center;
 }
 
 .div2 button{
-  width: 25px;
-  height: 25px;
-  margin: 0 2px;
+  width: 23px;
+  height: 23px;
+  margin: 1.5px 1.5px;
   border-radius: 5px;
   background-color: var(--white-transparent-color);
   transition: all 0.1s ease-in;
@@ -223,8 +250,8 @@ display: none;
   background-color: var(--red-color);
 }
 
-.div2 .pend:hover,
-..div2 .pend:hover{
+.div2 .Nonpend:hover,
+.div2 .pend:hover{
   background-color: white;
 }
 
@@ -247,15 +274,27 @@ display: none;
   display: inline;
 }
 
+.penddingText{
+  width: 100%;
+  height: 100%;
+}
+
+.penddingText>p{
+  font-family: 'Dancing Script', sans-serif;
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .peddingBox{
   width: 100%;
-  height: 50%;
+  height: 250px;
   border-radius: 10px;
   background-color: var(--white-transparent-color);
   word-wrap: break-word;
   overflow-y: auto;
   padding: 15px;
-  margin: 10px 0;
 }
 
 .line{
